--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
   }
 }
