--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.3",
     "helmet": "^6.1.5",
     "hpp": "^0.2.3",
+    "jimp": "^0.22.8",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
     "nodemailer": "^6.9.1",
